--- a/components/list/list-item/ListItem.module.scss
+++ b/components/list/list-item/ListItem.module.scss
@@ -1,48 +1,50 @@
 .itemContainer {
-    width: 100%;
-    height: 125px;
-    padding: 16px;
+  width: 100%;
+  height: 125px;
+  padding: 16px;
 
-    display: flex;
-    align-items: center;
+  background-color: #fff;
 
-    border-radius: 12px;
-    box-shadow: 0px 4px 20px #f7e5f0;
+  display: flex;
+  align-items: center;
+
+  border-radius: 12px;
+  box-shadow: 0px 4px 20px #f7e5f0;
 }
 
 .iconContainer {
-    width: 65px;
-    height: 65px;
+  width: 65px;
+  height: 65px;
 
-    margin-right: 20px;
+  margin-right: 20px;
 
-    object-fit: cover;
+  object-fit: cover;
 
-    overflow: hidden;
-    border-radius: 50%;
+  overflow: hidden;
+  border-radius: 50%;
 
-    box-shadow: 2px 2px 5px #00000080;
+  box-shadow: 2px 2px 5px #00000080;
 
-    flex: none;
+  flex: none;
 
-    & > img {
-        width: 100%;
-        height: 100%;
-    }
+  & > img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .description {
-    width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    font-size: 12px;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  font-size: 12px;
 }
