web: resolve issue15 && issue13

--- a/pages/submit/submit.module.scss
+++ b/pages/submit/submit.module.scss
@@ -2,7 +2,7 @@
   background: #eee;
   max-width: unset !important;
   padding-top: 20px;
-  height: 100vh;
+  min-height: 100vh;
   h2 {
     width: 80%;
     margin: 0 auto;
