--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -19,9 +19,8 @@
     margin-right: 10px;
   }
 
-  & > span:last-child {
-    text-decoration: underline;
-  }
+  caret-color: transparent;
+  cursor: pointer;
 }
 
 .self {
