--- a/components/list/list-item/ListItem.module.scss
+++ b/components/list/list-item/ListItem.module.scss
@@ -1,12 +1,13 @@
 .itemContainer {
   width: 100%;
   height: 125px;
-  padding: 16px;
+  padding: 16px 24px;
 
   background-color: #fff;
 
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   border-radius: 12px;
   box-shadow: 0px 4px 20px #f7e5f0;
@@ -15,8 +16,6 @@
 .iconContainer {
   width: 65px;
   height: 65px;
-
-  margin-right: 20px;
 
   object-fit: cover;
 
@@ -36,15 +35,36 @@
 .content {
   display: flex;
   flex-direction: column;
+  margin-right: 5px;
+
+  font-family: "Roboto";
 }
 
-.description {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  text-overflow: ellipsis;
+.name {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.information {
+  margin-bottom: 2px;
+
   font-size: 12px;
+  font-weight: 600;
+
+  & > span:first-child {
+    display: inline-block;
+    width: 55px;
+  }
+}
+
+.users {
+  color: #3ba4ff;
+}
+
+.tx {
+  color: #60a863;
+}
+
+.volume {
+  color: #c94ba8;
 }
